<resources>
    <string name="app_name">EdgeEComViewModel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_description">Add new item</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_no">Enter your Mobile No</string>
    <string name="enter_your_email_addess">Enter your Email Addess</string>
    <string name="enter_your_date_of_birth">Enter your Date of Birth</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="edge_shop">Edge Shop</string>
    <string name="this_is_the_product_image">This is the Product Image</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="this_is_electronics_catagory">This is Electronics Catagory</string>
    <string name="child_item_category_image">Child item category image</string>
</resources>