<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProfileFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:src="@drawable/header_image" />
    <RelativeLayout
        android:id="@+id/relativeProfile"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:id="@+id/profileBtn"
            android:layout_width="68dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/subtract" />
        <TextView
            android:id="@+id/profileTxt"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/profile"
            android:textSize="48sp"
            android:layout_below="@+id/profileBtn"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </RelativeLayout>
    <TextView
        android:id="@+id/infoTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeProfile"
        android:text="@string/personal_information"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#F96D00"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        />
    <!--    EditText with asterik sign-->
    <LinearLayout
        android:id="@+id/nameInfo"
        android:layout_below="@+id/infoTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/lableName"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:textColor="#2D2525"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:autofillHints="Please Enter your name"
            android:hint="@string/enter_your_name"
            android:textColor="@color/EditTextTextCol"
            android:background="@drawable/edittext"
            android:padding="6dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/MobileInfo"
        android:layout_below="@+id/nameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/lableMobile"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:textColor="#2D2525"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:autofillHints="Please Enter your mobile no"
            android:hint="@string/enter_your_mobile_no"
            android:textColor="@color/EditTextTextCol"
            android:background="@drawable/edittext"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:inputType="phone"
            android:maxLength="11"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/emailInfo"
        android:layout_below="@+id/MobileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:textColor="#2D2525"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:autofillHints="Please your Email"
            android:hint="@string/enter_your_email_addess"
            android:textColor="@color/EditTextTextCol"
            android:background="@drawable/edittext"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/birthDateInfo"
        android:layout_below="@+id/emailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/labelBirthDate"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:textColor="#2D2525"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/selectDate"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:autofillHints="Please your Date of Birth"
            android:hint="@string/enter_your_date_of_birth"
            android:inputType="text|date"
            android:textColor="@color/EditTextTextCol"
            android:background="@drawable/edittext"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/submitBtn"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:text="@string/submit"
        android:background="@drawable/editbutton"
        android:layout_below="@id/birthDateInfo"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:textFontWeight="500"
        android:layout_marginTop="25dp"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/fab_description"
        android:tint="@android:color/white" />

</RelativeLayout>